# jbundle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README.md  SUMMARY.md  contributing.md
docs/comparison/: vs-graalvm.md  vs-jpackage.md
docs/examples/: jabref.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: analyze.md  build-systems.md  caching.md  configuration.md  diagnostics.md  github-actions.md  gradle-multi-project.md  profiles.md
docs/reference/: cli.md  jdk-versions.md  platforms.md
example/clj-with-error/: build.clj  deps.edn
example/clj-with-error/src/example/: core.clj
example/clojure-deps/: build.clj
example/clojure-deps/src/example/: core.clj
example/clojure-lein/: project.clj
example/java-gradle/: build.gradle
example/java-pom/: pom.xml
example/java-pom/src/main/java/example/: App.java
src/: appcds.rs  build.rs  cli.rs  config.rs  crac.rs  detect.rs  error.rs  gradle.rs  jlink.rs  main.rs  project_config.rs  validate.rs
src/analyze/: classify.rs  mod.rs
src/diagnostic/: context.rs  mod.rs  parser.rs  render.rs
src/jvm/: download.rs  mod.rs
src/pack/: archive.rs  mod.rs  stub.rs
src/shrink/: mod.rs
